# cpp-cli

./: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  build_and_start.sh  compose-dev.yaml  compose.yaml  install.sh
cmake/: helpers.cmake
examples/: CMakeLists.txt
include/app/: CMakeLists.txt  app.hpp
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp
tools/: CMakeLists.txt
tools/cppversion/: CMakeLists.txt  cppversion.hpp
